--- a/assets/css/tailwind.scss
+++ b/assets/css/tailwind.scss
@@ -13,7 +13,7 @@ h1 {
 }
 
 h2 {
-  @apply text-4xl font-bold;
+  @apply lg:text-4xl font-bold text-3xl;
   .lighter_text {
     @apply relative;
     z-index: 55;
