--- a/assets/css/tailwind.scss
+++ b/assets/css/tailwind.scss
@@ -8,6 +8,10 @@
 @import "_layouts.scss";
 @import "_components.scss";
 
+* {
+  @apply box-border m-0 p-0;
+}
+
 h1 {
   @apply lg:text-5xl font-bold text-4xl;
 }
@@ -24,6 +28,10 @@ h2 {
       @apply absolute w-[100%] h-4 -z-10 left-0;
     }
   }
+}
+
+.links {
+  @apply text-primary underline;
 }
 
 section {
@@ -73,6 +81,42 @@ body {
         }
       }
 
+    }
+
+    .page_taif {
+      .pay_items {
+        @apply flex gap-4 max-lg:flex-col
+      }
+
+      .formules {
+        @apply grid grid-cols-12 gap-4;
+      }
+    }
+
+    .page_connexion {
+      @apply flex items-center;
+      .connexion_container {
+@apply px-10 h-full flex flex-col items-center justify-center;
+      }
+    }
+
+    .page_financement {
+      .financement {
+        @apply col-span-6 border border-gray-100 p-8 rounded-xl;
+        .financement-title {
+          @apply text-2xl mb-5;
+        }
+        .financement-description {
+          @apply text-text mb-5;
+
+        }
+      }
+    }
+
+    .page_contact {
+      .contact_form {
+        @apply w-full mt-5 max-w-2xl grid grid-cols-6 gap-4;
+      }
     }
   }
 }
